# ubuntu_automation_tool

./: .gitignore  README.md  pyproject.toml  ubuntu_tool.py
src/cross_tool/: __init__.py  cli.py  windows_tool.ps1
src/envsetup/: __init__.py  mac_tool.py
src/mysetuptool/: __init__.py  cli.py  mac_tool.py  ubuntu_tool.py  windows_tool.ps1  windows_tool.py
