[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mysetuptool"
version = "1.0.0"
description = "Cross-platform environment setup automation tool for Windows, Linux and macOS"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Frank Wang", email = "frankwang98@gmail.com"}
]
keywords = ["automation", "system", "devops", "environment", "setup", "cross-platform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=4.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
mysetuptool = "mysetuptool.cli:main"

[project.urls]
Homepage = "https://github.com/frankwang98/mysetuptool"
Repository = "https://github.com/frankwang98/mysetuptool"
Issues = "https://github.com/frankwang98/mysetuptool/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mysetuptool*"]

[tool.setuptools.package-data]
mysetuptool = ["*.ps1"]